--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           </li>
         </ul>
       </div>
+      <div class="border"></div>
     </header>
 
     <!-- // main -->
@@ -171,17 +172,19 @@
     </main>
 
     <!-- // footer -->
-    <footer class="footer">
-      <a href="./index.html" class="logo-link">Web<span class="logo-color">Studio</span></a>
+    <footer class="footer per">
+      <div class="container per">
+        <a href="./index.html" class="logo-link it">Web<span class="logo-color">Studio</span></a>
 
-      <address class="footer-adress">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-
-        <ul class="footer-contacts list">
-          <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+        <address class="footer-adress">
+          <p class="place it">г. Киев, пр-т Леси Украинки, 26</p>
+  
+          <ul class="footer-contacts list it">
+            <li class="item ch"><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
+            <li class="item ch"><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
