--- a/portfolio.html
+++ b/portfolio.html
@@ -12,171 +12,188 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+<!-- ?подключаем нормализацию стилей -->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+/>
+
     <!-- ? подключаем css -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body class="body">
     <!-- // header -->
-    <header class="header">
-      <nav>
-        <a href="./index.html" class="logo-link">Web<span class="logo-color">Studio</span></a>
+    <header class="header per">
+      <div class="container per">
+        <nav class="navigation it">
+          <a href="./index.html" class="logo-link">Web<span class="logo-color">Studio</span></a>
 
-        <ul class="pages-list list">
-          <li><a href="./index.html" class="page-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="page-link current">Портфолио</a></li>
-          <li><a href="" class="page-link">Контакты</a></li>
+          <ul class="pages-list list">
+            <li class="item ch"><a href="./index.html" class="page-link">Студия</a></li>
+            <li class="item ch"><a href="./portfolio.html" class="page-link current">Портфолио</a></li>
+            <li class="item ch"><a href="" class="page-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="header-contacts list it">
+          <li class="item ch">
+            <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+          </li>
+
+          <li class="item ch">
+            <a href="tel:+380961111111" class="phone">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="header-contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
-        </li>
-
-        <li>
-          <a href="tel:+380961111111" class="phone">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
+      <div class="border"></div>
     </header>
 
     <!-- // main -->
     <main>
       <!-- / Секция "наши проекты" -->
-      <section class="portfolio">
-        <ul class="filter-list list">
-          <li><button type="button" class="filter-button">Все</button></li>
-          <li><button type="button" class="filter-button">Веб-сайты</button></li>
-          <li><button type="button" class="filter-button">Приложения</button></li>
-          <li><button type="button" class="filter-button">Дизайн</button></li>
-          <li><button type="button" class="filter-button">Маркетинг</button></li>
-        </ul>
-
-        <h1 class="hidden">Наши проекты</h1>
-        <ul class="portfolio-list list">
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/tehnocrack.jpg"
-                alt="сотрудники компании Технокряк на мониторе ноутбука"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Технокряк</h2>
-            <p>Веб-сайт</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/poster.jpg"
-                alt="постер баскетбольного матча команд New Orlean vs Golden Star"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/restaurant.jpg"
-                alt="Логотип ресторана Seafood"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/project-prime.jpg"
-                alt="Картинка - наушники"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/project-boxes.jpg"
-                alt="картинка с коробками"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Проект Boxes</h2>
-            <p>Приложение</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/inspiration.jpg"
-                alt="картинка монитора с графиком"
-                width="370"
-              />
-            </a>
-            <h2 class="title" lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/limited-edition.jpg"
-                alt="картинка развернутой книги"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/project-lab.jpg"
-                alt="бирка компании Lab"
-                width="370"
-              />
-            </a>
-            <h2 class="title">Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
-          </li>
-
-          <li class="portfolio-card">
-            <a href="" class="portfolio-link">
-              <img
-                src="./images/img-portfolio/growing-business.jpg"
-                alt="на картинке ноутбук с открытым сайтом"
-                width="370"
-              />
-            </a>
-            <h2 class="title" lang="en">Growing Business</h2>
-            <p>Приложение</p>
-          </li>
-        </ul>
+      <section class="portfolio section per">
+        <div class="container per">
+          <ul class="filter-list list it">
+            <li><button type="button ch" class="filter-button">Все</button></li>
+            <li><button type="button ch" class="filter-button">Веб-сайты</button></li>
+            <li><button type="button ch" class="filter-button">Приложения</button></li>
+            <li><button type="button ch" class="filter-button">Дизайн</button></li>
+            <li><button type="button ch" class="filter-button">Маркетинг</button></li>
+          </ul>
+  
+          <h1 class="hidden">Наши проекты</h1>
+          <ul class="portfolio-list list it">
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/tehnocrack.jpg"
+                  alt="сотрудники компании Технокряк на мониторе ноутбука"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/poster.jpg"
+                  alt="постер баскетбольного матча команд New Orlean vs Golden Star"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p>Дизайн</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/restaurant.jpg"
+                  alt="Логотип ресторана Seafood"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+              <p>Приложение</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/project-prime.jpg"
+                  alt="Картинка - наушники"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Проект <span lang="en">Prime</span></h2>
+              <p>Маркетинг</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/project-boxes.jpg"
+                  alt="картинка с коробками"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Проект Boxes</h2>
+              <p>Приложение</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/inspiration.jpg"
+                  alt="картинка монитора с графиком"
+                  width="370"
+                />
+              </a>
+              <h2 class="title" lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/limited-edition.jpg"
+                  alt="картинка развернутой книги"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+              <p>Дизайн</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/project-lab.jpg"
+                  alt="бирка компании Lab"
+                  width="370"
+                />
+              </a>
+              <h2 class="title">Проект <span lang="en">LAB</span></h2>
+              <p>Маркетинг</p>
+            </li>
+  
+            <li class="portfolio-card">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-portfolio/growing-business.jpg"
+                  alt="на картинке ноутбук с открытым сайтом"
+                  width="370"
+                />
+              </a>
+              <h2 class="title" lang="en">Growing Business</h2>
+              <p>Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- // footer -->
-    <footer class="footer">
-      <a href="./index.html" class="logo-link">Web<span class="logo-color">Studio</span></a>
+    <footer class="footer per">
+      <div class="container per">
+        <a href="./index.html" class="logo-link it">Web<span class="logo-color">Studio</span></a>
 
-      <address class="footer-adress">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-
-        <ul class="footer-contacts list">
-          <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+        <address class="footer-adress">
+          <p class="place it">г. Киев, пр-т Леси Украинки, 26</p>
+  
+          <ul class="footer-contacts list it">
+            <li class="item ch"><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
+            <li class="item ch"><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
