--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
           </li>
         </ul>
       </div>
-      <div class="border"></div>
     </header>
 
     <!-- // main -->
@@ -59,7 +58,7 @@
       <section class="hero per">
         <div class="container per">
           <h1 class="title it">Эффективные решения для вашего бизнеса</h1>
-          <button type="button it" class="hero-button">Заказать услугу</button>
+          <button type="button" class="hero-button it">Заказать услугу</button>
         </div>
       </section>
       <!-- / Секция "Преимущества работы с нами."-->
@@ -79,14 +78,14 @@
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
-            </li class="item ch">
+            </li>
 
             <li class="item ch">
               <h3 class="features-title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
-            </li class="item ch">
+            </li>
 
             <li class="item ch">
               <h3 class="features-title">Современные технологии</h3>
@@ -101,30 +100,30 @@
         <h2 class="description-title">Чем мы занимаемся</h2>
         <div class="container per">
           <ul class="list it">
-          <li class="item ch">
-            <img
-              src="./images/img-index/logic.jpg"
-              alt="разрабатываем логику проекта"
-              width="370"
-            />
-          </li>
+            <li class="item ch">
+              <img
+                src="./images/img-index/logic.jpg"
+                alt="разрабатываем логику проекта"
+                width="370"
+              />
+            </li>
 
-          <li class="item ch">
-            <img
-              src="./images/img-index/gadget.jpg"
-              alt="разрабатываем адаптивный дизайн"
-              width="370"
-            />
-          </li>
+            <li class="item ch">
+              <img
+                src="./images/img-index/gadget.jpg"
+                alt="разрабатываем адаптивный дизайн"
+                width="370"
+              />
+            </li>
 
-          <li class="item ch">
-            <img
-              src="./images/img-index/color.jpg"
-              alt="подбираем сочитание цветов к вашей тематики"
-              width="370"
-            />
-          </li>
-        </ul>
+            <li class="item ch">
+              <img
+                src="./images/img-index/color.jpg"
+                alt="подбираем сочитание цветов к вашей тематики"
+                width="370"
+              />
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -138,8 +137,10 @@
               alt="Ведущий специалист - Дизайнер"
               width="270"
             />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p lang="en" class="specialization">Product Designer</p>
+            <div class="person ch">
+              <h3 class="name">Игорь Демьяненко</h3>
+              <p lang="en" class="specialization">Product Designer</p>
+            </div>
           </li>
 
           <li class="team-member ch">
@@ -148,14 +149,18 @@
               alt="Ведущий специалист - Разработчик"
               width="270"
             />
-            <h3 class="name">Ольга Репина</h3>
-            <p lang="en" class="specialization">Frontend Developer</p>
+            <div class="person ch">
+              <h3 class="name">Ольга Репина</h3>
+              <p lang="en" class="specialization">Frontend Developer</p>
+            </div>
           </li>
 
           <li class="team-member ch">
             <img src="./images/img-index/nikolai.jpg" alt="Специалист по маркетингу" width="270" />
-            <h3 class="name">Николай Тарасов</h3>
-            <p lang="en" class="specialization">Marketing</p>
+            <div class="person ch">
+              <h3 class="name">Николай Тарасов</h3>
+              <p lang="en" class="specialization">Marketing</p>
+            </div>
           </li>
 
           <li class="team-member ch">
@@ -164,8 +169,10 @@
               alt="Ведущий специалист - Дизайнер"
               width="270"
             />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p lang="en" class="specialization">UI Designer</p>
+            <div class="person ch">
+              <h3 class="name">Михаил Ермаков</h3>
+              <p lang="en" class="specialization">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
@@ -178,9 +185,11 @@
 
         <address class="footer-adress">
           <p class="place it">г. Киев, пр-т Леси Украинки, 26</p>
-  
+
           <ul class="footer-contacts list it">
-            <li class="item ch"><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
+            <li class="item ch">
+              <a href="mailto:info@example.com" class="mail">info@example.com</a>
+            </li>
             <li class="item ch"><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
           </ul>
         </address>
