--- a/portfolio.html
+++ b/portfolio.html
@@ -13,14 +13,14 @@
       rel="stylesheet"
     />
 
-<!-- ?подключаем нормализацию стилей -->
-<link
-rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
-integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
-crossorigin="anonymous"
-referrerpolicy="no-referrer"
-/>
+    <!-- ?подключаем нормализацию стилей -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+      integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- ? подключаем css -->
     <link rel="stylesheet" href="./css/style.css" />
@@ -35,7 +35,9 @@ referrerpolicy="no-referrer"
 
           <ul class="pages-list list">
             <li class="item ch"><a href="./index.html" class="page-link">Студия</a></li>
-            <li class="item ch"><a href="./portfolio.html" class="page-link current">Портфолио</a></li>
+            <li class="item ch">
+              <a href="./portfolio.html" class="page-link current">Портфолио</a>
+            </li>
             <li class="item ch"><a href="" class="page-link">Контакты</a></li>
           </ul>
         </nav>
@@ -50,7 +52,6 @@ referrerpolicy="no-referrer"
           </li>
         </ul>
       </div>
-      <div class="border"></div>
     </header>
 
     <!-- // main -->
@@ -58,15 +59,24 @@ referrerpolicy="no-referrer"
       <!-- / Секция "наши проекты" -->
       <section class="portfolio section per">
         <div class="container per">
-          <ul class="filter-list list it">
-            <li><button type="button ch" class="filter-button">Все</button></li>
-            <li><button type="button ch" class="filter-button">Веб-сайты</button></li>
-            <li><button type="button ch" class="filter-button">Приложения</button></li>
-            <li><button type="button ch" class="filter-button">Дизайн</button></li>
-            <li><button type="button ch" class="filter-button">Маркетинг</button></li>
-          </ul>
-  
           <h1 class="hidden">Наши проекты</h1>
+
+          <ul class="filter-list list it">
+            <li class="btn-item it"><button type="button" class="filter-button ch">Все</button></li>
+            <li class="btn-item it">
+              <button type="button" class="filter-button ch">Веб-сайты</button>
+            </li>
+            <li class="btn-item it">
+              <button type="button" class="filter-button ch">Приложения</button>
+            </li>
+            <li class="btn-item it">
+              <button type="button" class="filter-button ch">Дизайн</button>
+            </li>
+            <li class="btn-item it">
+              <button type="button" class="filter-button ch">Маркетинг</button>
+            </li>
+          </ul>
+
           <ul class="portfolio-list list it">
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
@@ -76,10 +86,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Технокряк</h2>
-              <p>Веб-сайт</p>
+              <div class="card-description ch">
+                <h2 class="title">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -88,10 +100,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p>Дизайн</p>
+              <div class="card-description ch">
+                <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p>Дизайн</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -100,10 +114,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-              <p>Приложение</p>
+              <div class="card-description ch">
+                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                <p>Приложение</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -112,10 +128,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Проект <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
+              <div class="card-description ch">
+                <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -124,10 +142,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Проект Boxes</h2>
-              <p>Приложение</p>
+              <div class="card-description ch">
+                <h2 class="title">Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -136,10 +156,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title" lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <div class="card-description ch">
+                <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -148,10 +170,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
+              <div class="card-description ch">
+                <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                <p>Дизайн</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -160,10 +184,12 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title">Проект <span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
+              <div class="card-description ch">
+                <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
-  
+
             <li class="portfolio-card">
               <a href="" class="portfolio-link">
                 <img
@@ -172,8 +198,10 @@ referrerpolicy="no-referrer"
                   width="370"
                 />
               </a>
-              <h2 class="title" lang="en">Growing Business</h2>
-              <p>Приложение</p>
+              <div class="card-description ch">
+                <h2 class="title" lang="en">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -187,9 +215,11 @@ referrerpolicy="no-referrer"
 
         <address class="footer-adress">
           <p class="place it">г. Киев, пр-т Леси Украинки, 26</p>
-  
+
           <ul class="footer-contacts list it">
-            <li class="item ch"><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
+            <li class="item ch">
+              <a href="mailto:info@example.com" class="mail">info@example.com</a>
+            </li>
             <li class="item ch"><a href="tel:+380991111111" class="phone">+38 099 111 11 11</a></li>
           </ul>
         </address>
