исправления от ментора

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       </section>
       <!-- / Секция "Преимущества работы с нами."-->
       <section class="features section per">
+        <div class="container per"></div>
         <h2 class="hidden">Преимущества работы с нами.</h2>
-        <div class="container per">
-          <ul class="list it">
+         <ul class="list it">
             <li class="item ch">
               <h3 class="features-title">Внимание к деталям</h3>
               <p>
@@ -98,7 +98,7 @@
       <!-- / Секция "Чем мы занимаемся" -->
       <section class="our-description per">
         <h2 class="description-title">Чем мы занимаемся</h2>
-        <div class="container per">
+        <div class="container per"></div>
           <ul class="list it">
             <li class="item ch">
               <img
@@ -130,7 +130,8 @@
       <!-- / Секция "Наша команда"-->
       <section class="team per section">
         <h2 class="team-title it">Наша команда</h2>
-        <ul class="list container it">
+        <div class="container it">
+        <ul class="list">
           <li class="team-member ch">
             <img
               src="./images/img-index/igor.jpg"
@@ -175,6 +176,7 @@
             </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
