корректировка по ментору 2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
       <!-- / Секция "Преимущества работы с нами."-->
       <section class="features section per">
-        <div class="container per"></div>
+        <div class="container per">
         <h2 class="hidden">Преимущества работы с нами.</h2>
          <ul class="list it">
             <li class="item ch">
@@ -97,9 +97,9 @@
 
       <!-- / Секция "Чем мы занимаемся" -->
       <section class="our-description per">
+        <div class="container per">
         <h2 class="description-title">Чем мы занимаемся</h2>
-        <div class="container per"></div>
-          <ul class="list it">
+                  <ul class="description-list list it">
             <li class="item ch">
               <img
                 src="./images/img-index/logic.jpg"
@@ -129,9 +129,10 @@
 
       <!-- / Секция "Наша команда"-->
       <section class="team per section">
-        <h2 class="team-title it">Наша команда</h2>
         <div class="container it">
-        <ul class="list">
+        <h2 class="team-title it">Наша команда</h2>
+        
+        <ul class="team-list list">
           <li class="team-member ch">
             <img
               src="./images/img-index/igor.jpg"
